Adding new theme and proper css class names

--- a/modules/wordpressCom/pages/wpcom.template.html
+++ b/modules/wordpressCom/pages/wpcom.template.html
@@ -1,44 +1,87 @@
 ﻿<script id="wpc-tpl-0-hub-a" type="text/html">
-    <h2 class="wpc-hub-title">{{title}}</h2>
-    <ul class="wpc-hub-ul" data-role="listview">
+    <h2 class="wpc-hub-title" rel="{{id}}">{{title}}</h2>
+    <div class="wpc-hub-list" >
         {{#posts}}
-        <li class="wpc-hub-li" style="background-image:url('{{imgThumbUrl}}');background-size:cover;" class="wpc-post-li" rel="{{id}}">
-            <h4>{{title}}</h4>
-        </li>
-        {{/posts}}			
-    </ul>
-</script>
-<script id="wpc-tpl-0-hub-b" type="text/html">
-    <h2 class="wpc-hub-title">{{title}}</h2>
-    <ul data-role="listview">
-        {{#posts}}
-            <div style="background-image:url('{{imgThumbUrl}}');background-size:cover;" class="wpc-post-hub-div-2" rel="{{id}}">
-                <h4>{{title}}</h4>
+            <div style="background-image:url('{{imgThumbUrl}}');background-size:cover;" class="wpc-post-div" rel="{{id}}">
+                <h4 class="wpc-post-title">{{title}}</h4>
+                <p class="wpc-post-subtitle">{{description}}</p>
             </div>
         {{/posts}}			
-    </ul>
+    </div>
+</script>
+<script id="wpc-tpl-0-hub-b" type="text/html">
+    <h2 class="wpc-hub-title" rel="{{id}}">{{title}}</h2>
+    <div class="wpc-hub-list" >
+        {{#posts}}
+        <div style="background-image:url('{{imgThumbUrl}}');background-size:cover;" class="wpc-post-div" rel="{{id}}">
+            <h4 class="wpc-post-title">{{title}}</h4>
+        </div>
+        {{/posts}}			
+    </div>
 </script>
 <script id="wpc-tpl-0-list" type="text/html">
-    <ul data-role="listview">
+    <div class="wpc-list" >
         {{#posts}}
-        <li>
-            <a href="#" class="wpc-post-link" rel="{{id}}">
-                <img src="{{imgThumbUrl}}" />
-                <h3>{{title}}</h3>
-                <p>{{description}}</p>
-            </a>
-        </li>
+        <div style="background-image:url('{{imgThumbUrl}}');background-size:cover;" class="wpc-post-div" rel="{{id}}">
+            <h4 class="wpc-post-title">{{title}}</h4>
+        </div>
         {{/posts}}			
-    </ul>
+    </div>
 </script>
 <script id="wpc-tpl-0-post-content" type="text/html">    
-    <div>
+    <div class="wpc-post" >
         <h1>{{title}}</h1>
         <p>{{{content}}}</p>
     </div>
 </script>
 <script id="wpc-tpl-0-post-header" type="text/html">    
     <a href="#" data-rel="back" data-role="button" data-icon="arrow-l">back</a>        
-    <div style="height:200px;background-image:url('{{imgUrl}}');background-size:cover;">
+    <div style="height:260px;background-image:url('{{imgUrl}}');background-size:cover;">
+    </div>
+</script>
+
+
+
+
+
+
+<script id="wpc-tpl-1-hub-a" type="text/html">
+    <h2 class="wpc-hub-title" rel="{{id}}">{{title}}</h2>
+    <div class="wpc-hub-list" >
+        {{#posts}}
+        <div class="wpc-post-div" rel="{{id}}">
+            <div class="wpc-post-left" style="background-image:url('{{imgThumbUrl}}');background-size:cover;" >
+            </div>
+            <div class="wpc-post-right">
+                <h4 class="wpc-post-title">{{title}}</h4>
+                <p class="wpc-post-subtitle">{{description}}</p>
+            </div>
+        </div>
+    {{/posts}}			
+    </div>
+</script>
+<script id="wpc-tpl-1-list" type="text/html">
+    <div class="wpc-list" >
+        {{#posts}}
+        <div class="wpc-post-div" rel="{{id}}">
+            <div class="wpc-post-left" style="background-image:url('{{imgThumbUrl}}');background-size:cover;" >
+            </div>
+            <div class="wpc-post-right">
+                <h4 class="wpc-post-title">{{title}}</h4>
+                <p class="wpc-post-subtitle">{{description}}</p>
+            </div>
+        </div>
+        {{/posts}}			
+    </div>
+</script>
+<script id="wpc-tpl-1-post-content" type="text/html">    
+    <div class="wpc-post" >
+        <h1>{{title}}</h1>
+        <p>{{{content}}}</p>
+    </div>
+</script>
+<script id="wpc-tpl-1-post-header" type="text/html">    
+    <a href="#" data-rel="back" data-role="button" data-icon="arrow-l">back</a>        
+    <div style="height:260px;background-image:url('{{imgUrl}}');background-size:cover;">
     </div>
 </script>
