--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <link rel="stylesheet" href="css/jquery.mobile-1.3.1.min.css" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
         <link rel="stylesheet" type="text/css" href="modules/wordpressCom/css/wpcom.css" />
+        <link rel="stylesheet" type="text/css" href="css/custom.css" />
         <title></title>
     </head>
     <body>
