--- a/modules/wordpressCom/pages/wpcom.template.html
+++ b/modules/wordpressCom/pages/wpcom.template.html
@@ -1,4 +1,4 @@
-﻿<script id="wpc-tpl-0-hub-a" type="text/html">
+﻿<script id="wpc-tpl-0-hub" type="text/html">
     <h2 class="wpc-hub-title" rel="{{id}}">{{title}}</h2>
     <div class="wpc-hub-list" >
         {{#posts}}
@@ -6,16 +6,6 @@
                 <h4 class="wpc-post-title">{{title}}</h4>
                 <p class="wpc-post-subtitle">{{description}}</p>
             </div>
-        {{/posts}}			
-    </div>
-</script>
-<script id="wpc-tpl-0-hub-b" type="text/html">
-    <h2 class="wpc-hub-title" rel="{{id}}">{{title}}</h2>
-    <div class="wpc-hub-list" >
-        {{#posts}}
-        <div style="background-image:url('{{imgThumbUrl}}');background-size:cover;" class="wpc-post-div" rel="{{id}}">
-            <h4 class="wpc-post-title">{{title}}</h4>
-        </div>
         {{/posts}}			
     </div>
 </script>
@@ -45,7 +35,7 @@
 
 
 
-<script id="wpc-tpl-1-hub-a" type="text/html">
+<script id="wpc-tpl-1-hub" type="text/html">
     <h2 class="wpc-hub-title" rel="{{id}}">{{title}}</h2>
     <div class="wpc-hub-list" >
         {{#posts}}
