--- a/modules/wordpressCom/pages/wpcom.template.html
+++ b/modules/wordpressCom/pages/wpcom.template.html
@@ -2,31 +2,39 @@
     <h2 class="wpc-hub-title" rel="{{id}}">{{title}}</h2>
     <div class="wpc-hub-list" >
         {{#posts}}
-            <div style="background-image:url('{{imgThumbUrl}}');background-size:cover;" class="wpc-post-div" rel="{{id}}">
+        <div class="wpc-post-div" rel="{{id}}">
+            <div class="wpc-tpl-0-img" style="background-image:url('{{imgThumbUrl}}');background-size:cover;">                
+            </div>
+            <div class="wpc-tpl-0-overlay">
                 <h4 class="wpc-post-title">{{title}}</h4>
                 <p class="wpc-post-subtitle">{{description}}</p>
+                <p class="wpc-post-ago">{{ago}}</p>
             </div>
-        {{/posts}}			
-    </div>
+        </div>
+    {{/posts}}			
+    </div>    
 </script>
 <script id="wpc-tpl-0-list" type="text/html">
     <div class="wpc-list" >
         {{#posts}}
-        <div style="background-image:url('{{imgThumbUrl}}');background-size:cover;" class="wpc-post-div" rel="{{id}}">
-            <h4 class="wpc-post-title">{{title}}</h4>
+        <div class="wpc-post-div" rel="{{id}}">
+            <div class="wpc-tpl-0-img" style="background-image:url('{{imgThumbUrl}}');background-size:cover;">                
+            </div>
+            <div class="wpc-tpl-0-overlay">
+                <h4 class="wpc-post-title">{{title}}</h4>
+                <p class="wpc-post-subtitle">{{description}}</p>
+                <p class="wpc-post-ago">{{ago}}</p>
+            </div>
         </div>
         {{/posts}}			
     </div>
 </script>
 <script id="wpc-tpl-0-post-content" type="text/html">    
+    <div style="height:260px;background-image:url('{{imgUrl}}');background-size:cover;">
+    </div>
     <div class="wpc-post" >
         <h1>{{title}}</h1>
         <p>{{{content}}}</p>
-    </div>
-</script>
-<script id="wpc-tpl-0-post-header" type="text/html">    
-    <a href="#" data-rel="back" data-role="button" data-icon="arrow-l">back</a>        
-    <div style="height:260px;background-image:url('{{imgUrl}}');background-size:cover;">
     </div>
 </script>
 
@@ -65,13 +73,56 @@
     </div>
 </script>
 <script id="wpc-tpl-1-post-content" type="text/html">    
+    <div style="height:260px;background-image:url('{{imgUrl}}');background-size:cover;">
+    </div>
     <div class="wpc-post" >
         <h1>{{title}}</h1>
         <p>{{{content}}}</p>
     </div>
 </script>
-<script id="wpc-tpl-1-post-header" type="text/html">    
-    <a href="#" data-rel="back" data-role="button" data-icon="arrow-l">back</a>        
-    <div style="height:260px;background-image:url('{{imgUrl}}');background-size:cover;">
+
+
+
+
+
+
+<script id="wpc-tpl-2-hub" type="text/html">
+    <h2 class="wpc-hub-title" rel="{{id}}">{{title}}</h2>
+    <div class="wpc-hub-list" >
+        {{#posts}}
+        <div class="wpc-post-div" rel="{{id}}">
+            <div class="wpc-post-left" style="background-image:url('{{imgThumbUrl}}');background-size:cover;" >
+            </div>
+            <div class="wpc-post-right">
+                <h4 class="wpc-post-title">{{title}}</h4>
+                <p class="wpc-post-subtitle">{{description}}</p>
+            </div>
+        </div>
+    {{/posts}}			
     </div>
 </script>
+<script id="wpc-tpl-2-list" type="text/html">
+    <div class="wpc-list" >
+        {{#posts}}
+        <div class="wpc-post-div" rel="{{id}}">
+            <div class="wpc-post-left" style="background-image:url('{{imgThumbUrl}}');background-size:cover;" >
+            </div>
+            <div class="wpc-post-right">
+                <h4 class="wpc-post-title">{{title}}</h4>
+                <p class="wpc-post-subtitle">{{description}}</p>
+            </div>
+        </div>
+        {{/posts}}			
+    </div>
+</script>
+<script id="wpc-tpl-2-post-content" type="text/html">    
+    <a href="#" data-rel="back" data-role="button" data-icon="arrow-l">back</a>        
+    <div style="height:260px;background-image:url('{{imgUrl}}');background-size:cover;">
+    </div>    <div class="wpc-post" >
+        <h1>{{title}}</h1>
+        <p>{{{content}}}</p>
+    </div>
+</script>
+
+
+
