dynamically update the menu

--- a/index.html
+++ b/index.html
@@ -120,10 +120,8 @@
                 </div>
             </div>
         <nav id="main_menu">            
-            <ul class="list">
-                <li>Home</li>
-                <li>About Us</li>
-                <li>Pages</li>
+            <ul id="menu_list" class="list">
+                <li><a href="#ip-hub">Home</a></li>
             </ul>
         </nav>   
         </div>    
