Color and styling changes to enable live preview

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     </head>
     <body>
         <div id="afui">
-            <div id="header">
+            <div id="header" class="ip-header">
                 <a href="#" class="menuButton" style="float:left;" onclick="$.ui.toggleSideMenu()"></a>
             </div>
             <div id="content">
