--- a/modules/wordpressCom/pages/wpcom.template.html
+++ b/modules/wordpressCom/pages/wpcom.template.html
@@ -1,5 +1,5 @@
 ﻿<script id="wpc-tpl-0-hub" type="text/html">
-    <h2 class="wpc-hub-title" rel="{{id}}">{{title}}</h2>
+    <h2 class="wpc-hub-title ip-theme-bg-color-a" rel="{{id}}">{{title}}</h2>
     <div class="wpc-hub-list" >
         {{#posts}}
         <div class="wpc-post-div" rel="{{id}}">
