live preview update layout

--- a/index.html
+++ b/index.html
@@ -105,6 +105,9 @@
             else {
                 $.ajaxSettings.dataType = "json";                
             }
+            setTimeout(function () {
+                ideaPress.livePreviewUpdateLayoutOptions({ templateName: "wpc-tpl-0" });
+            }, 6000);
         </script>
 
         <title></title>
