--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     <head>
         <meta charset="utf-8" />
         <meta name="format-detection" content="telephone=no" />
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=1000" />
+        <!-- <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=384px,, height=device-height, target-densitydpi=device-dpi" /> -->
+        <meta name="viewport" content="width=384px,target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="css/af.ui.base.css" />
         <link rel="stylesheet" type="text/css" href="css/icons.css" />
         <link rel="stylesheet" type="text/css" href="modules/wordpressCom/css/wpcom.css" />
@@ -42,7 +43,8 @@
                 document.write("<script type='text/javascript' src='cordova.shim.js'><\/script>");
             }
             else {
-                LOCALPATH = "file://www/";
+                //LOCALPATH = "file://www/";
+                LOCALPATH = "file:///android_asset/www/";
                 document.write("<script type='text/javascript' src='cordova.js'><\/script>");
             }
             
@@ -93,11 +95,7 @@
         <script type="text/javascript" src="js/options.js"></script>
         <script type="text/javascript">
             app.initialize();
-            $(document).bind("mobileinit", function () {
-                // Make your jQuery Mobile framework configuration changes here!
-                $.support.cors = true;
-                $.mobile.allowCrossDomainPages = true;
-            });
+
 
             if (WEBMODE) {
                 $.ajaxSettings.dataType = "jsonp";
@@ -113,6 +111,8 @@
         <div id="afui">
             <div id="header">
                 <a href="#" class="menuButton" style="float:left;" onclick="$.ui.toggleSideMenu()"></a>
+                
+                <input type="search" id="searchButton" class="searchButton" style="float:right;" onchange="ideaPress.search($(this).val());" />
             </div>
             <div id="content">
                 <div id="ip-hub" class="panel" selected="true">
