--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
             <div id="header" class="ip-header">
                 <a href="#" class="menuButton" style="float:left;" onclick="$.ui.toggleSideMenu()"></a>
                 
+                <input type="button" href="#" class="bookmarkButton" style="float:left;" id="bookMarkButton" value="bmark" />
                 <input type="search" id="searchButton" class="searchButton" style="float:right;" onchange="ideaPress.search($(this).val());" />
             </div>
             <div id="content">
