live update init, content, style update

--- a/index.html
+++ b/index.html
@@ -110,6 +110,9 @@
             else {
                 $.ajaxSettings.dataType = "json";                
             }
+
+            
+
         </script>
 
         <title></title>
@@ -129,7 +132,7 @@
             </div>
         <nav id="main_menu">            
             <ul id="menu_list" class="list">
-                <li id="menu_home"><a href="#ip-hub">Home</a></li>
+                <li id="menu_home" rel="0"><a href="#ip-hub">Home</a></li>
             </ul>
         </nav>   
         </div>    
