--- a/modules/wordpressCom/pages/wpcom.template.html
+++ b/modules/wordpressCom/pages/wpcom.template.html
@@ -126,3 +126,43 @@
 
 
 
+<script id="wpc-tpl-3-hub" type="text/html">
+    <h2 class="wpc-hub-title" rel="{{id}}">{{title}}</h2>
+    <div class="wpc-hub-list" >
+        {{#posts}}
+        <div class="wpc-post-div" rel="{{id}}">
+            <div class="wpc-tpl-3-img" style="background-image:url('{{imgThumbUrl}}');background-size:cover;">                
+            </div>
+            <div class="wpc-tpl-3-overlay">
+                <h4 class="wpc-post-title">{{title}}</h4>
+                <p class="wpc-post-subtitle">{{description}}</p>
+                <p class="wpc-post-ago">{{ago}}</p>
+            </div>
+        </div>
+    {{/posts}}			
+    </div>
+</script>
+<script id="wpc-tpl-3-list" type="text/html">
+    <div class="wpc-list" >
+        {{#posts}}
+        <div class="wpc-post-div" rel="{{id}}">
+            <div class="wpc-post-left" style="background-image:url('{{imgThumbUrl}}');background-size:cover;" >
+            </div>
+            <div class="wpc-post-right">
+                <h4 class="wpc-post-title">{{title}}</h4>
+                <p class="wpc-post-subtitle">{{description}}</p>
+            </div>
+        </div>
+        {{/posts}}			
+    </div>
+</script>
+<script id="wpc-tpl-3-post-content" type="text/html">    
+    <a href="#" data-rel="back" data-role="button" data-icon="arrow-l">back</a>        
+    <div style="height:260px;background-image:url('{{imgUrl}}');background-size:cover;">
+    </div>    <div class="wpc-post" >
+        <h1>{{title}}</h1>
+        <p>{{{content}}}</p>
+    </div>
+</script>
+
+
