--- a/modules/wordpress/pages/wp.template.html
+++ b/modules/wordpress/pages/wp.template.html
@@ -1,6 +1,6 @@
 ﻿<script id="wp-tpl-0-hub" type="text/html">
     <h2 class="wp-hub-title ip-theme-bg-color-a" rel="{{id}}">{{title}}</h2>
-    <div class="wpc-hub-list" >
+    <div class="wp-hub-list" >
         {{#posts}}
         <div class="wp-post-div" rel="{{id}}">
             <div class="wp-tpl-0-img" style="background-image:url('{{imgThumbUrl}}');background-size:cover;">                
@@ -124,5 +124,44 @@
     </div>
 </script>
 
+
+<script id="wp-tpl-3-hub" type="text/html">
+    <h2 class="wp-hub-title" rel="{{id}}">{{title}}</h2>
+    <div class="wp-hub-list" >
+        {{#posts}}
+        <div class="wp-post-div" rel="{{id}}">
+            <div class="wp-tpl-3-img" style="background-image:url('{{imgThumbUrl}}');background-size:cover;">                
+            </div>
+            <div class="wp-tpl-3-overlay">
+                <h4 class="wp-post-title">{{title}}</h4>
+                <p class="wp-post-subtitle">{{description}}</p>
+                <p class="wp-post-ago">{{ago}}</p>
+            </div>
+        </div>
+    {{/posts}}			
+    </div>
+</script>
+<script id="wp-tpl-3-list" type="text/html">
+    <div class="wp-list" >
+        {{#posts}}
+        <div class="wp-post-div" rel="{{id}}">
+            <div class="wp-post-left" style="background-image:url('{{imgThumbUrl}}');background-size:cover;" >
+            </div>
+            <div class="wp-post-right">
+                <h4 class="wp-post-title">{{title}}</h4>
+                <p class="wp-post-subtitle">{{description}}</p>
+            </div>
+        </div>
+        {{/posts}}			
+    </div>
+</script>
+<script id="wp-tpl-3-post-content" type="text/html">    
+    <a href="#" data-rel="back" data-role="button" data-icon="arrow-l">back</a>        
+    <div style="height:260px;background-image:url('{{imgUrl}}');background-size:cover;">
+    </div>    <div class="wp-post" >
+        <h1>{{title}}</h1>
+        <p>{{{content}}}</p>
+    </div>
+</script>
 
 
