--- a/index.html
+++ b/index.html
@@ -148,7 +148,8 @@ function fetchRemoteContent(scroller){
             <div id="header" class="ip-header">
                 <a href="#" class="menuButton" style="float:left;" onclick="$.ui.toggleSideMenu()"></a>
                 
-                <input type="button" href="#" class="bookmarkButton" style="float:left;" id="bookMarkButton" value="bmark" />
+                <!--<input type="button" href="#" class="bookmarkButton" style="float:left;" id="bookMarkButton" value="bmark" />-->
+                <a href="#" class="bookmarkButton" id="bookMarkButton" style="margin-left:7px;"/></a>
                 <input type="search" id="searchButton" class="searchButton" style="float:right;" onchange="ideaPress.search($(this).val());" />
             </div>
             <div id="content" >
