--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
             }
 
             $.ui.ready(function () {
-
- 
-
+                $('#unbookMarkButton').hide();
+                $('#bookMarkButton').hide();
+                
 
 var myScroller=$("#ip-hub").scroller({
     scrollBars: true,
@@ -156,7 +156,8 @@ function fetchRemoteContent(scroller){
                 <a href="#" class="menuButton" style="float:left;" onclick="$.ui.toggleSideMenu()"></a>
                 
                 <!--<input type="button" href="#" class="bookmarkButton" style="float:left;" id="bookMarkButton" value="bmark" />-->                
-                <a href="#" class="bookmarkButton" id="bookMarkButton" style="margin-right:3px; float:right"/></a>
+                <a href="#" class="bookmarkButton" id="bookMarkButton" style="margin-right:3px; float:right; background-image: url('img/bookmark.png');"/></a>
+                <a href="#" class="bookmarkButton" id="unbookMarkButton" style="margin-right:3px; float:right; background-image: url('img/bookmarked.png');"/></a>
                 <input type="search" id="searchButton" class="searchButton" style="float:right; display:none;" onchange="ideaPress.search($(this).val());" />
                 <a href="#" class="searchShowButton" id="searchShowButton" style="margin-right:3px; float:right" onclick="showSearch()"/></a>
             </div>
